--- a/events.html
+++ b/events.html
@@ -152,7 +152,7 @@
       location: null,                 // no physical location
       virtual: true,                  // mark virtual
       zoom: "https://osu.zoom.us/meeting/register/OBKK4x6ARW-nLENvzqbGAg",
-      description: "Market rundown, risk review, and a breakout scalp workflow."
+      description: "Club Overview introductions."
     }];
     const RECUR_RULES = [];
 
