--- a/index.html
+++ b/index.html
@@ -13,60 +13,93 @@
   <meta property="og:image" content="assets/images/osu-daytraders-logo.png"/>
   <meta name="twitter:card" content="summary_large_image"/>
 
-  <!-- Page polish to match Applications/Events -->
+  <!-- Page polish to match Applications/Events with strong imagery -->
   <style>
     :root{
       --scarlet:#c4122f; --ink:#121212; --muted:#646464; --panel:#fff; --surface:#f6f6f6;
     }
     body{background:var(--surface)}
 
-    /* Hero */
+    /* Header is from global CSS */
+
+    /* HERO with image + overlay */
     .hero{
-      background:radial-gradient(1200px 420px at 70% -10%, #dc2a47 0%, var(--scarlet) 40%, #a50f27 100%);
-      color:#fff; padding:clamp(3.5rem,6vw,5.75rem) 1rem 2.25rem;
-      text-align:center; position:relative; overflow:hidden;
-      box-shadow:0 24px 80px rgba(0,0,0,.25) inset;
+      position:relative; overflow:hidden; color:#fff;
+      padding:clamp(3.5rem,6vw,6rem) 1rem;
+      background:#7f0d1f; /* fallback */
+      isolation:isolate;
     }
-    .hero .wrap{max-width:1100px;margin:0 auto}
-    .hero h1{margin:0 0 .6rem 0;font-weight:1000;letter-spacing:.01em;
-      font-size:clamp(2.1rem,4.6vw,3.4rem);line-height:1.06}
-    .hero p{margin:.25rem auto 1.2rem;max-width:780px;color:#ffeef0;letter-spacing:.01em;font-size:clamp(1rem,1.25vw,1.15rem)}
-    .cta-row{display:flex;gap:.6rem;justify-content:center;flex-wrap:wrap}
+    .hero::before{
+      content:""; position:absolute; inset:0; z-index:-2;
+      background:url("assets/images/slide-1.png") center/cover no-repeat;
+      filter:saturate(1.05) brightness(.7);
+      transform:scale(1.03);
+    }
+    .hero::after{
+      content:""; position:absolute; inset:0; z-index:-1;
+      background:radial-gradient(1400px 520px at 70% -10%, rgba(220,42,71,.9) 0%, rgba(196,18,47,.92) 45%, rgba(122,9,24,.95) 100%);
+      mix-blend-mode:multiply; opacity:.95;
+    }
+    .hero .wrap{max-width:1100px;margin:0 auto;display:grid;gap:1.2rem}
+    .hero h1{margin:0;font-weight:1000;letter-spacing:.01em;
+      font-size:clamp(2rem,4.6vw,3.6rem);line-height:1.06}
+    .hero p{margin:.25rem 0 1.1rem;max-width:800px;color:#ffebee;font-size:clamp(1rem,1.25vw,1.15rem)}
+    .cta-row{display:flex;gap:.6rem;flex-wrap:wrap}
     .btn{display:inline-block;border-radius:999px;padding:.9rem 1.15rem;font-weight:900;text-decoration:none}
     .btn-primary{background:#fff;color:#111;box-shadow:0 10px 24px rgba(255,255,255,.25)}
     .btn-outline{background:transparent;color:#fff;border:2px solid #fff}
     .btn:hover{filter:brightness(.95)}
 
-    /* Sections */
+    /* Page content */
     .page{max-width:1100px;margin:0 auto;padding:2rem 1rem 3rem}
+
+    /* Feature image cards */
     .grid{display:grid;gap:1rem}
     .grid-3{grid-template-columns:repeat(3,1fr)}
     @media (max-width:900px){.grid-3{grid-template-columns:1fr}}
+    .imgcard{
+      position:relative; overflow:hidden; border-radius:20px; color:#fff;
+      min-height:210px; box-shadow:0 18px 44px rgba(0,0,0,.18);
+    }
+    .imgcard img{position:absolute; inset:0; width:100%; height:100%; object-fit:cover; filter:brightness(.72) saturate(1.05)}
+    .imgcard .badge{position:absolute; top:.75rem; left:.75rem; background:#fff;color:#111;font-weight:900;font-size:.75rem;padding:.3rem .6rem;border-radius:999px}
+    .imgcard .cap{
+      position:absolute; left:0; right:0; bottom:0; padding:1rem 1rem 1.15rem;
+      background:linear-gradient(180deg,rgba(0,0,0,0) 0%, rgba(0,0,0,.55) 65%, rgba(0,0,0,.75) 100%);
+    }
+    .imgcard h3{margin:0 0 .25rem 0;font-size:1.15rem}
+    .imgcard p{margin:0;color:#e9e9e9}
+
+    /* Section headers */
+    .section-head{display:flex;align-items:baseline;justify-content:space-between;gap:1rem;margin:1.4rem 0 .8rem}
+    .section-head h2{margin:0;font-weight:1000;color:var(--ink);font-size:clamp(1.4rem,2.4vw,1.9rem)}
+    .btn-light{background:#fff;color:#111;border:1px solid #eee;border-radius:999px;padding:.7rem 1rem;font-weight:900;text-decoration:none}
+
+    /* Next event preview (image + details) */
+    .next-event{display:grid;gap:1rem;grid-template-columns:1.05fr .95fr}
+    @media (max-width:900px){.next-event{grid-template-columns:1fr}}
     .card{
       background:var(--panel); border:1px solid #eee; border-radius:20px;
-      padding:clamp(1rem,2vw,1.35rem); box-shadow:0 16px 40px rgba(0,0,0,.08);
+      padding:clamp(1rem,2vw,1.25rem); box-shadow:0 16px 40px rgba(0,0,0,.08);
       transition:transform .14s ease, box-shadow .14s ease;
     }
     .card:hover{transform:translateY(-2px); box-shadow:0 24px 56px rgba(0,0,0,.12)}
-    .card h3{margin:.1rem 0 .35rem 0; font-size:1.15rem; color:var(--ink)}
-    .card p{margin:.25rem 0 0 0; color:#434343}
-    .label{display:inline-block;background:var(--scarlet);color:#fff;font-weight:900;font-size:.76rem;padding:.3rem .6rem;border-radius:999px}
+    .event-visual{
+      position:relative; overflow:hidden; border-radius:16px; min-height:220px;
+      background:#111;
+    }
+    .event-visual img{position:absolute;inset:0;width:100%;height:100%;object-fit:cover;filter:brightness(.8)}
+    .event-chip{position:absolute; top:.6rem; left:.6rem;background:var(--scarlet);color:#fff;font-weight:900;border-radius:999px;font-size:.75rem;padding:.3rem .6rem}
+    .event-title{margin:.1rem 0 .35rem 0;font-weight:1000;color:var(--ink);font-size:1.35rem}
+    .meta{display:grid;gap:.35rem;color:#565656}
+    .event-actions{display:flex;gap:.5rem;flex-wrap:wrap;margin-top:.6rem}
+    .btn-scarlet{background:var(--scarlet);color:#fff;border-radius:999px;padding:.85rem 1.05rem;font-weight:900;text-decoration:none}
 
-    /* Next event preview */
-    .next-event{display:grid;gap:.8rem;grid-template-columns:1.2fr .9fr}
-    @media (max-width:900px){.next-event{grid-template-columns:1fr}}
-    .event-meta{display:grid;gap:.35rem;color:#555}
-    .event-title{margin:0;font-weight:1000;color:var(--ink);font-size:1.35rem}
-    .meta-line{font-size:.98rem}
-    .event-actions{display:flex;gap:.5rem;flex-wrap:wrap;margin-top:.4rem}
-    .btn-scarlet{background:var(--scarlet);color:#fff}
-    .btn-light{background:#fff;border:1px solid #ddd;color:#111}
-
-    /* Section headers */
-    .section-head{display:flex;align-items:baseline;justify-content:space-between;gap:1rem;margin:1.25rem 0 .75rem}
-    .section-head h2{margin:0;font-weight:1000;color:var(--ink);font-size:clamp(1.4rem,2.4vw,1.8rem)}
-
-    /* Footer spacing comes from global */
+    /* Gallery */
+    .gallery{display:grid;gap:.75rem;grid-template-columns:2fr 1fr 1fr}
+    @media (max-width:900px){.gallery{grid-template-columns:1fr}}
+    .gallery figure{position:relative; overflow:hidden; border-radius:18px; margin:0; min-height:180px; box-shadow:0 14px 36px rgba(0,0,0,.12)}
+    .gallery img{position:absolute; inset:0; width:100%; height:100%; object-fit:cover}
   </style>
 </head>
 <body>
@@ -89,7 +122,7 @@
     </nav>
   </header>
 
-  <!-- Hero -->
+  <!-- HERO -->
   <section class="hero">
     <div class="wrap">
       <h1>Learn. Trade. Grow.</h1>
@@ -101,77 +134,72 @@
     </div>
   </section>
 
-  <!-- What we do -->
+  <!-- Feature image cards -->
   <main class="page">
     <div class="section-head">
       <h2>What we do</h2>
-      <a class="btn btn-light" href="resources.html">View resources</a>
+      <a class="btn-light" href="resources.html">View resources</a>
     </div>
-
-    <div class="grid grid-3">
-      <article class="card">
-        <span class="label">Foundations</span>
-        <h3>Intro to Day Trading & Risk</h3>
-        <p>Position sizing, stop-loss logic, trade journaling, and how to not blow up. For newer members or anyone resetting their process.</p>
-      </article>
-      <article class="card">
-        <span class="label">Practice</span>
-        <h3>Strategy Lab</h3>
-        <p>Backtest together, share playbooks, and do post-trade review with peers. Good notes beat good memory.</p>
-      </article>
-      <article class="card">
-        <span class="label">Community</span>
-        <h3>Guest Speakers</h3>
-        <p>Traders, quants, and builders who share both the wins and the scars. Real edge, not guru fluff.</p>
-      </article>
-    </div>
-
-    <!-- Next Event Preview -->
-    <div class="section-head" style="margin-top:1.6rem">
-      <h2>Next event</h2>
-      <a class="btn btn-light" href="events.html">Open calendar</a>
-    </div>
-
-    <section class="card next-event" id="nextEvent">
-      <div>
-        <h3 class="event-title" id="evName">Weekly Meeting</h3>
-        <div class="event-meta">
-          <div class="meta-line" id="evWhen">Mon, Jan 1 • 6:00 PM ET</div>
-          <div class="meta-line" id="evWhere">Virtual (Zoom)</div>
-          <p class="meta-line" id="evDesc">Market rundown, risk review, and a breakout scalp workflow.</p>
+    <section class="grid grid-3">
+      <article class="imgcard">
+        <img src="assets/images/slide-2.png" alt="Strategy Lab"/>
+        <span class="badge">Practice</span>
+        <div class="cap">
+          <h3>Strategy Lab</h3>
+          <p>Backtesting, journal review, and Q&A together.</p>
         </div>
-        <div class="event-actions">
-          <a class="btn btn-scarlet" id="evZoom" target="_blank" rel="noopener">Register on Zoom</a>
-          <a class="btn btn-light" id="evAdd" target="_blank" rel="noopener">Add to Google Calendar</a>
+      </article>
+      <article class="imgcard">
+        <img src="assets/images/trading-committee.jpg" alt="Risk & Process"/>
+        <span class="badge">Standards</span>
+        <div class="cap">
+          <h3>Risk & Process</h3>
+          <p>Sizing, stop logic, and a repeatable framework.</p>
         </div>
-      </div>
-      <aside class="card" style="background:#fafafa;border:1px dashed #e7e7e7;">
-        <h3 style="margin:.1rem 0 .4rem 0;font-size:1.05rem;">How we meet</h3>
-        <p style="margin:.25rem 0 0 0;color:#494949">Sessions are virtual unless noted. We record core workshops and share notes in Resources. Bring your questions and your journals.</p>
-      </aside>
+      </article>
+      <article class="imgcard">
+        <img src="assets/images/slide-3.png" alt="Speakers"/>
+        <span class="badge">Community</span>
+        <div class="cap">
+          <h3>Guest Speakers</h3>
+          <p>Traders, quants, and builders who bring real edge.</p>
+        </div>
+      </article>
     </section>
 
-    <!-- Quick links -->
+    <!-- Next Event with visual -->
     <div class="section-head" style="margin-top:1.6rem">
-      <h2>Get involved</h2>
+      <h2>Next event</h2>
+      <a class="btn-light" href="events.html">Open calendar</a>
     </div>
-    <div class="grid grid-3">
-      <a class="card" href="applications.html#member" style="text-decoration:none;color:inherit">
-        <span class="label">Membership</span>
-        <h3>Join the club</h3>
-        <p>Access meetings, labs, and speakers. Find accountability partners and level up together.</p>
-      </a>
-      <a class="card" href="applications.html#speaker" style="text-decoration:none;color:inherit">
-        <span class="label">Programming</span>
-        <h3>Apply to speak</h3>
-        <p>Have a teachable edge or useful scars? We want to hear from you.</p>
-      </a>
-      <a class="card" href="contact.html" style="text-decoration:none;color:inherit">
-        <span class="label">Partner</span>
-        <h3>Contact us</h3>
-        <p>Questions about sponsoring, collaborating, or joining leadership.</p>
-      </a>
+    <section class="next-event">
+      <aside class="event-visual">
+        <img src="assets/images/slide-1.png" alt="Weekly Meeting"/>
+        <span class="event-chip">Weekly</span>
+      </aside>
+      <article class="card">
+        <h3 class="event-title" id="evName">Weekly Meeting</h3>
+        <div class="meta">
+          <div id="evWhen">Mon, Jan 1 • 6:00 PM ET</div>
+          <div id="evWhere">Virtual (Zoom)</div>
+          <p id="evDesc">Market rundown, risk review, and a breakout scalp workflow.</p>
+        </div>
+        <div class="event-actions">
+          <a class="btn-scarlet" id="evZoom" target="_blank" rel="noopener">Register on Zoom</a>
+          <a class="btn-light" id="evAdd" target="_blank" rel="noopener">Add to Google Calendar</a>
+        </div>
+      </article>
+    </section>
+
+    <!-- Gallery strip -->
+    <div class="section-head" style="margin-top:1.6rem">
+      <h2>Inside the club</h2>
     </div>
+    <section class="gallery">
+      <figure><img src="assets/images/slide-2.png" alt="Workshop session"/></figure>
+      <figure><img src="assets/images/slide-3.png" alt="Study group"/></figure>
+      <figure><img src="assets/images/trading-committee.jpg" alt="Committee review"/></figure>
+    </section>
   </main>
 
   <!-- Footer -->
@@ -184,12 +212,11 @@
     // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    // ----- Next-event data (kept in sync with Events page) -----
+    // Next-event data (kept consistent with Events page)
     const now = new Date();
-    // 17th of current month, 6:00 PM ET, Virtual
     const next = {
       name: "Weekly Meeting",
-      start: new Date(now.getFullYear(), now.getMonth(), 17, 18, 0),
+      start: new Date(now.getFullYear(), now.getMonth(), 17, 18, 0), // 17th • 6 PM ET
       duration: 75,
       virtual: true,
       zoom: "https://osu.zoom.us/meeting/register/OBKK4x6ARW-nLENvzqbGAg",
@@ -199,7 +226,6 @@
     // Render preview
     const fmtDate = d => d.toLocaleDateString([], {weekday:"short", month:"short", day:"numeric"});
     const fmtTime = d => d.toLocaleTimeString([], {hour:"numeric", minute:"2-digit"});
-
     document.getElementById("evName").textContent = next.name;
     document.getElementById("evWhen").textContent = `${fmtDate(next.start)} • ${fmtTime(next.start)} ET`;
     document.getElementById("evWhere").textContent = "Virtual (Zoom)";
